@@ -1,6 +1,6 @@
 Package: clusterExperiment
 Title: Compare Clusterings for Single-Cell Sequencing 
-Version: 2.1.3-9009
+Version: 2.1.3-9010
 Description: Provides functionality for running and comparing many
     different clusterings of single-cell sequencing data or other large mRNA Expression data sets.
 Authors@R: c(person("Elizabeth", "Purdom", email = "epurdom@stat.berkeley.edu",
@@ -88,6 +88,7 @@ Collate:
     'plotContrastHeatmap.R'
     'plotDendrogram.R'
     'plotFeatureBoxplot.R'
+    'plotFeatureScatter.R'
     'plotHeatmap.R'
     'plotReduceDim.R'
     'plotTableClusters.R'
