@@ -82,6 +82,7 @@ exportMethods(plotCoClustering)
 exportMethods(plotContrastHeatmap)
 exportMethods(plotDendrogram)
 exportMethods(plotFeatureBoxplot)
+exportMethods(plotFeatureScatter)
 exportMethods(plotHeatmap)
 exportMethods(plotReducedDims)
 exportMethods(plotTableClusters)
