@@ -427,13 +427,16 @@ seqPal1<-rev(RColorBrewer::brewer.pal(11, "Spectral"))
 #'  that correspond to the clusterIds in the ClusterExperiment object. If this
 #'  argument is missing, will use the names in the "name" column of the clusterLegend
 #'  slot of the object.
+#' @param add logical. Whether legend should be added to the existing plot.
+#' @param location character passed to \code{x} argument of legend indicating 
+#'  where to place legend.
 #' @param ... arguments passed to legend
 #' @rdname plottingFunctions
 #' @aliases plotClusterLegend
 setMethod(
   f = "plotClusterLegend",
   signature = c("ClusterExperiment"),
-  definition = function(object,whichCluster="primary",clusterNames,title,...){
+  definition = function(object,whichCluster="primary",clusterNames,title,add=FALSE,location=if(add)"topright" else "center",...){
     whichCluster<-.convertSingleWhichCluster(object,whichCluster,list(...))
     legMat<-clusterLegend(object)[[whichCluster]]
     if(!missing(clusterNames)){
@@ -464,8 +467,13 @@ setMethod(
       ord<-c(which(!isNeg),which(isNeg))
     }
     else ord<-seq_len(nrow(legMat))
-    plot(0,0,type="n",xaxt="n",yaxt="n",xlab="",ylab="",bty="n")
-    legend("center",legend=clusterNames[ord],fill=legMat[ord,"color"],title=title,...)
+    if(!add){
+			plot(0,0,type="n",xaxt="n",yaxt="n",xlab="",ylab="",bty="n")
+			legend(x=location,legend=clusterNames[ord],fill=legMat[ord,"color"],title=title,...)
+		}
+		else{
+			legend(x=location,legend=clusterNames[ord],fill=legMat[ord,"color"],title=title,...)
+		}
     
     
   })
